Added models and connection to Azure MySQL Database

--- a/TransportPartner/Views/Shared/Overview.cshtml
+++ b/TransportPartner/Views/Shared/Overview.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TransportPartner.Models.DeliveryViewModel>
+﻿@model IEnumerable<TransportPartner.ViewModels.DeliveryViewModel>
 
 @{
     ViewData["Title"] = "Overview";
