--- a/TransportPartner/Views/Home/Index.cshtml
+++ b/TransportPartner/Views/Home/Index.cshtml
@@ -2,7 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Velkommen til TransportPartner</h1>
+        <p>
+            Transport AS er et selskap som tilbyr levering fra ett lager hjem til privatpersoner.
+            TransportPartner er en tjeneste som gir en oversikt over tidligere leveranser og gir mulighet til å administrere leveranser, i form av å legge til, slette og oppdatere leveranser.
+        </p>
+        <img src="~/resources/logo.png" />
+    </div>
