--- a/TransportPartner/Views/Shared/Administration.cshtml
+++ b/TransportPartner/Views/Shared/Administration.cshtml
@@ -1,5 +1,4 @@
-﻿@model TransportPartner.Models.DeliveryViewModel
-
+﻿
 @{
     ViewData["Title"] = "Administration";
 }
@@ -10,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" asp-controller="Administration">
+        <form asp-action="Create" asp-controller="">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
