--- a/TransportPartner/Views/Shared/_Layout.cshtml
+++ b/TransportPartner/Views/Shared/_Layout.cshtml
@@ -22,10 +22,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Hjem</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Delivery" asp-action="Overview">Leveringer</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Delivery" asp-action="Deliveries">Leveringer</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Administration" asp-action="Administration">Administrer</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Storage" asp-action="StorageList">Varelager</a>
                         </li>
                     </ul>
                 </div>
