--- a/TransportPartner/Views/Shared/_Layout.cshtml
+++ b/TransportPartner/Views/Shared/_Layout.cshtml
@@ -22,10 +22,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Hjem</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Delivery" asp-action="Index">Leveringer</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Deliveries" asp-action="Index">Leveringer</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Items" asp-action="Index">Varelager</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="Index">Firmabiler</a>
                         </li>
                     </ul>
                 </div>
