--- a/TransportPartner/Views/Items/Edit.cshtml
+++ b/TransportPartner/Views/Items/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Endre vare</h1>
 
-<h4>Item</h4>
+<h4>Vare</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -29,14 +29,19 @@
                 <span asp-validation-for="Genre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="Price" class="control-label"></label>
+                <input asp-for="Price" class="form-control" />
+                <span asp-validation-for="Price" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Lagre" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Tilbake til Varelager</a>
 </div>
 
 @section Scripts {
