Dropdowns populated from database

--- a/TransportPartner/Views/Deliveries/Create.cshtml
+++ b/TransportPartner/Views/Deliveries/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model TransportPartner.Models.Delivery
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@model TransportPartner.Models.Delivery
 
 @{
     ViewData["Title"] = "Create";
@@ -22,17 +23,23 @@
             </div>
             <div class="form-group">
                 <label asp-for="CarUsed" class="control-label"></label>
-                <input asp-for="CarUsed" class="form-control" />
+                <select asp-for="CarUsed" class="form-control" asp-items="ViewBag.CarUsed">
+                    <option value="">-- Velg firmabil --</option>
+                </select>
                 <span asp-validation-for="CarUsed" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Item" class="control-label"></label>
-                <input asp-for="Item" class="form-control" />
+                <select asp-for="Item" class="form-control" asp-items="ViewBag.Item">
+                    <option value="">-- Velg varer --</option>
+                </select>
                 <span asp-validation-for="Item" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Employee" class="control-label"></label>
-                <input asp-for="Employee" class="form-control" />
+                <select asp-for="Employee" class="form-control" asp-items="ViewBag.Employee">
+                    <option value="">-- Velg sjåfør --</option>
+                </select>
                 <span asp-validation-for="Employee" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
