--- a/TransportPartner/Views/Deliveries/Index.cshtml
+++ b/TransportPartner/Views/Deliveries/Index.cshtml
@@ -43,16 +43,16 @@
                 @Html.DisplayFor(modelItem => item.Address)
             </td>
             <th>
-                @Html.DisplayNameFor(modelItem => item.CarUsed)
+                @Html.DisplayFor(modelItem => item.CarUsed)
             </th>
             <th>
-                @Html.DisplayNameFor(modelItem => item.Item)
+                @Html.DisplayFor(modelItem => item.Item)
             </th>
             <th>
-                @Html.DisplayNameFor(modelItem => item.Employee)
+                @Html.DisplayFor(modelItem => item.Employee)
             </th>
             <th>
-                @Html.DisplayNameFor(modelItem => item.Delivered)
+                @Html.DisplayFor(modelItem => item.Delivered)
             </th>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.DeliveryId">Endre</a> |
