All core CRUD functions works in every page

--- a/TransportPartner/Views/Deliveries/Details.cshtml
+++ b/TransportPartner/Views/Deliveries/Details.cshtml
@@ -7,7 +7,6 @@
 <h1>Detaljer</h1>
 
 <div>
-    <h4>Delivery</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -21,6 +20,12 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Address)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Postcode)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Postcode)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CarUsed)
