--- a/TransportPartner/Views/Deliveries/Create.cshtml
+++ b/TransportPartner/Views/Deliveries/Create.cshtml
@@ -22,6 +22,11 @@
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Postcode" class="control-label"></label>
+                <input asp-for="Postcode" class="form-control" />
+                <span asp-validation-for="Postcode" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="CarUsed" class="control-label"></label>
                 <select asp-for="CarUsed" class="form-control" asp-items="ViewBag.CarUsed">
                     <option value="">-- Velg firmabil --</option>
