--- a/TransportPartner/Views/Deliveries/Delete.cshtml
+++ b/TransportPartner/Views/Deliveries/Delete.cshtml
@@ -24,6 +24,12 @@
             @Html.DisplayFor(model => model.Address)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Postcode)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Postcode)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CarUsed)
         </dt>
         <dd class="col-sm-10">
