Sorting and fill/empty db

--- a/TransportPartner/Views/Deliveries/Details.cshtml
+++ b/TransportPartner/Views/Deliveries/Details.cshtml
@@ -55,5 +55,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.DeliveryId">Endre</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Tilbake til Leveringer</a>
 </div>
