--- a/TransportPartner/Views/Deliveries/Index.cshtml
+++ b/TransportPartner/Views/Deliveries/Index.cshtml
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.DeliveryDate)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["DateSortParm"]">@Html.DisplayNameFor(model => model.DeliveryDate)</a>
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Address)
@@ -22,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.Postcode)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CarUsed)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["RegNrSortParm"]">@Html.DisplayNameFor(model => model.CarUsed)</a>
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Employee)
@@ -34,32 +34,36 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.DeliveryDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Postcode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CarUsed)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Employee)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Delivered)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.DeliveryId">Endre</a> |
-                <a asp-action="Details" asp-route-id="@item.DeliveryId">Detaljer</a> |
-                <a asp-action="Delete" asp-route-id="@item.DeliveryId">Slett</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DeliveryDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Address)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Postcode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CarUsed)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Employee)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Delivered)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.DeliveryId">Endre</a> |
+                    <a asp-action="Details" asp-route-id="@item.DeliveryId">Detaljer</a> |
+                    <a asp-action="Delete" asp-route-id="@item.DeliveryId">Slett</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+<a asp-action="FillDatabase">Fyll database</a>
+<a asp-action="EmptyDatabase">Tøm database</a>
