--- a/TransportPartner/Views/Items/Details.cshtml
+++ b/TransportPartner/Views/Items/Details.cshtml
@@ -17,6 +17,12 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Developer)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Developer)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Genre)
         </dt>
         <dd class="col-sm-10">
