--- a/TransportPartner/Views/Items/Index.cshtml
+++ b/TransportPartner/Views/Items/Index.cshtml
@@ -16,6 +16,9 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Developer)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Genre)
             </th>
             <th>
@@ -29,6 +32,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Developer)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Genre)
