Can assign item to delivery

--- a/TransportPartner/Views/Deliveries/Create.cshtml
+++ b/TransportPartner/Views/Deliveries/Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using TransportPartner.ViewModels
 @model TransportPartner.Models.Delivery
 
 @{
@@ -34,11 +35,11 @@
                 <span asp-validation-for="CarUsed" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Item" class="control-label"></label>
-                <select asp-for="Item" class="form-control" asp-items="ViewBag.Item">
+                <label asp-for="Items" class="control-label"></label>
+                <select name="items" asp-for="Items" multiple="multiple" class="form-control" asp-items="ViewBag.Item" >
                     <option value="">-- Velg varer --</option>
                 </select>
-                <span asp-validation-for="Item" class="text-danger"></span>
+                <span asp-validation-for="Items" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Employee" class="control-label"></label>
@@ -55,7 +56,7 @@
             <div class="form-group">
                 <input type="submit" value="Opprett" class="btn btn-primary" />
             </div>
-        </form>
+            </form>
     </div>
 </div>
 
