--- a/TransportPartner/Views/Deliveries/Edit.cshtml
+++ b/TransportPartner/Views/Deliveries/Edit.cshtml
@@ -36,11 +36,11 @@
                 <span asp-validation-for="CarUsed" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Item" class="control-label"></label>
-                <select asp-for="Item" class="form-control" asp-items="ViewBag.Item">
+                <label asp-for="Items" class="control-label"></label>
+                <select asp-for="Items" class="form-control" asp-items="ViewBag.Item">
                     <option value="">-- Velg varer --</option>
                 </select>
-                <span asp-validation-for="Item" class="text-danger"></span>
+                <span asp-validation-for="Items" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Employee" class="control-label"></label>
