--- a/TransportPartner/Views/Deliveries/Delete.cshtml
+++ b/TransportPartner/Views/Deliveries/Delete.cshtml
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.CarUsed)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Item)
+            @Html.DisplayNameFor(model => model.Items)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Item)
+            @Html.DisplayFor(model => model.Items)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Employee)
