--- a/TransportPartner/Views/Deliveries/Details.cshtml
+++ b/TransportPartner/Views/Deliveries/Details.cshtml
@@ -34,10 +34,22 @@
             @Html.DisplayFor(model => model.CarUsed)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Item)
+            @Html.DisplayNameFor(model => model.Items)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Item)
+            <table class="table">
+                <tr>
+                    <th>Varenavn</th>
+                </tr>
+                @foreach (var item in Model.Items)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(model => item.ItemId)
+                        </td>
+                    </tr>
+                }
+            </table>
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Employee)
