--- a/TransportPartner/Views/Deliveries/Details.cshtml
+++ b/TransportPartner/Views/Deliveries/Details.cshtml
@@ -45,7 +45,7 @@
                 {
                     <tr>
                         <td>
-                            @Html.DisplayFor(model => item.ItemId)
+                            @Html.DisplayFor(model => item.ItemName)
                         </td>
                     </tr>
                 }
