Edit and emptyDatabase() still odesnt work

--- a/TransportPartner/Views/Deliveries/Index.cshtml
+++ b/TransportPartner/Views/Deliveries/Index.cshtml
@@ -66,4 +66,4 @@
 </table>
 
 <a asp-action="FillDatabase">Fyll database</a>
-<a asp-action="EmptyDatabase">Tøm database</a>
+@*<a asp-action="EmptyDatabase">Tøm database</a>*@
