--- a/TransportPartner/Views/Deliveries/Edit.cshtml
+++ b/TransportPartner/Views/Deliveries/Edit.cshtml
@@ -37,7 +37,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Items" class="control-label"></label>
-                <select asp-for="Items" class="form-control" asp-items="ViewBag.Item">
+                <select name="items" multiple="multiple" asp-for="Items" class="form-control" asp-items="ViewBag.Item">
                     <option value="">-- Velg varer --</option>
                 </select>
                 <span asp-validation-for="Items" class="text-danger"></span>
