--- a/TransportPartner/Views/Items/Delete.cshtml
+++ b/TransportPartner/Views/Items/Delete.cshtml
@@ -18,6 +18,12 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductId)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ProductId)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Developer)
         </dt>
         <dd class="col-sm-10">
