--- a/TransportPartner/Views/Items/Edit.cshtml
+++ b/TransportPartner/Views/Items/Edit.cshtml
@@ -19,6 +19,11 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ProductId" class="control-label"></label>
+                <input asp-for="ProductId" class="form-control" />
+                <span asp-validation-for="ProductId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Developer" class="control-label"></label>
                 <input asp-for="Developer" class="form-control" />
                 <span asp-validation-for="Developer" class="text-danger"></span>
